--- a/aula1.html
+++ b/aula1.html
@@ -8,5 +8,34 @@
 <body>
     <h1>Hi</h1>
     <h2>Hello</h2>
+    <p>Primeiro paragrafo</p>
+    <img src="webmobile/img/Itachi-Uchiha.webp" title="Itachi-Uchiha">
+
+    <ol>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+        <li>5</li>
+    </ol>
 </body>
+<table>
+    <tr>
+        <td>LINHA 1 - Coluna 1</td>
+        <td>LINHA 1.1 - Coluna 2</td>
+        <td>LINHA 1.2 - Coluna 3</td>
+    </tr>
+
+    <tr>
+        <td>LINHA 2 - Coluna 1</td>
+        <td>LINHA 2.1 - Coluna 2</td>
+        <td>LINHA 2.2 - Coluna 3</td>
+    </tr>
+    <tr>
+        <td>LINHA 3 - Coluna 1</td>
+        <td>LINHA 3.1 - Coluna 2</td>
+        <td>LINHA 3.2 - Coluna 3</td>
+    </tr>
+    <tr></tr>
+</table>
 </html>
