aula-2 - Adicionando bootstrap / tela de login

--- a/aula1.html
+++ b/aula1.html
@@ -9,7 +9,7 @@
     <h1>Hi</h1>
     <h2>Hello</h2>
     <p>Primeiro paragrafo</p>
-    <img src="webmobile/img/Itachi-Uchiha.webp" title="Itachi-Uchiha">
+    <img src="img/Itachi-Uchiha.webp" title="Itachi-Uchiha">
 
     <ol>
         <li>1</li>
@@ -36,6 +36,7 @@
         <td>LINHA 3.2 - Coluna 3</td>
     </tr>
     <tr></tr>
+    
 </table>
 </body>
 </html>
