--- a/login.html
+++ b/login.html
@@ -4,48 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register Now</title>
+    <link rel="stylesheet" href="bootstrap/bootstrap.css">
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="css/login.css">
 </head>
-<body>
-    <div class="container d-flex justify-content-center align-items-center min-vh-100">
-        <div class="row border rounded-5 p-3 bg-white shadow box-area">
+    <body>
+        <div class="container d-flex justify-content-center align-items-center min-vh-100">
+            <div class="row border rounded-5 p-3 bg-white shadow box-area">
 
-        <div class="col-md-6 rounded-4 d-flex justify-content-center align-items-center flex-column left-box" style="background: #103cbe">
-            <p class="text-white fs-2" style="font-family:'Courier New', Courier, monospace; font-weight: 600;">Bem-vindo!</p>
-            <div class="login-image mb-3">
-                <img src="img/chatbotB.png" class="img-fluid" style="width: 500px">
-            </div>
-            <p class="text-white fs-2" style="font-family:Verdana, Geneva, Tahoma, sans-serif;">Faça Autenticação</p>
-            <small class="text-white text-wrap text-center" style="width: 17rem; font-family: 'Courier New', Courier, monospace; font-weight: 300;">Venha fazer parte do nosso sistema!</small>
+            <div class="col-md-6 rounded-4 d-flex justify-content-center align-items-center flex-column left-box" style="background: #103cbe">
+                <p class="text-white fs-2" style="font-family:'Courier New', Courier, monospace; font-weight: 600;">Bem-vindo!</p>
+                <div class="login-image mb-3">
+                    <img src="img/chatbotB.png" class="img-fluid" style="width: 500px">
+                </div>
+                <p class="text-white fs-2" style="font-family:Verdana, Geneva, Tahoma, sans-serif;">Faça Autenticação</p>
+                <small class="text-white text-wrap text-center" style="width: 17rem; font-family: 'Courier New', Courier, monospace; font-weight: 300;">Venha fazer parte do nosso sistema!</small>
 
-        </div>   
+            </div>   
 
-        <div class="col-md-6 right-box">
-            <div class="row align-items-center">
-                <div class="header-text mb-4">
-                    <p>Olá!</p>
-                    <p>É bom te ver novamente!</p>
-                </div>
-                <div class="input-group mb-3">
-                    <p>E-mail</p>
-                    <input type="text" class="form-control form-control-lg bg-light fs-6" placeholder="Input your email" >
-                </div>
-                <div class="input-group mb-1">
-                    <p>Password</p>
-                    <input type="password" class="form-control form-control-lg bg-light fs-6 " placeholder="Password">
-                </div>
-                <div class="input-group mb-5 d-flex">
-                    <div class="form-check">
-                        <input type="checkbox" class="form-check-input" id="formcheck">
-                        <label for="formcheck" class="form-check-label text-secondary mb-1">Remember me</small>
+            <div class="col-md-6 right-box">
+                <div class="row align-items-center">
+                    <div class="header-text mb-4">
+                        <p>Olá!</p>
+                        <p>É bom te ver novamente!</p>
                     </div>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control form-control-lg bg-light fs-6" placeholder="Input your email" >
+                    </div>
+                    <div class="input-group mb-1">
+                        <input type="password" class="form-control form-control-lg bg-light fs-6 " placeholder="Password">
+                    </div>
+                    <div class="input-group mb-3 d-flex">
+                        <div class="form-check d-flex justify-content-start">
+                            <input type="checkbox" class="form-check-input" id="formcheck">
+                            <label for="formcheck" class="form-check-label text-secondary">Remember me</small>   
+                        </div>
+                        <div class="col d-flex justify-content-end">
+                            <!-- Simple link -->
+                            <a href="#!">Forgot password?</a>
+                        </div>  
+                    </div>
+                    <div class="d-grid gap-2">
+                        <button class="btn btn-primary" type="button">Button</button>
+                        <button class="btn btn-primary" type="button">
+                            <img src="img/google.png" class="img-fluid" width="20px">
+                            Login with Google</button>
+                    </div>
+
                 </div>
+
             </div>
 
+            </div>
         </div>
-
-        </div>
-    </div>
-</body>
+    </body>
 </html>
