login.html changes//img add

--- a/login.html
+++ b/login.html
@@ -12,10 +12,10 @@
         <div class="container d-flex justify-content-center align-items-center min-vh-100">
             <div class="row border rounded-5 p-3 bg-white shadow box-area">
 
-            <div class="col-md-6 rounded-4 d-flex justify-content-center align-items-center flex-column left-box" style="background: #103cbe">
+            <div class="col-md-6 rounded-4 d-flex justify-content-center align-items-center flex-column left-box" style="background: #000000">
                 <p class="text-white fs-2" style="font-family:'Courier New', Courier, monospace; font-weight: 600;">Bem-vindo!</p>
                 <div class="login-image mb-3">
-                    <img src="img/chatbotB.png" class="img-fluid" style="width: 500px">
+                    <img src="img/Login-cuate.png" class="img-fluid" style="width: 500px">
                 </div>
                 <p class="text-white fs-2" style="font-family:Verdana, Geneva, Tahoma, sans-serif;">Faça Autenticação</p>
                 <small class="text-white text-wrap text-center" style="width: 17rem; font-family: 'Courier New', Courier, monospace; font-weight: 300;">Venha fazer parte do nosso sistema!</small>
@@ -37,16 +37,16 @@
                     <div class="input-group mb-3 d-flex">
                         <div class="form-check d-flex justify-content-start">
                             <input type="checkbox" class="form-check-input" id="formcheck">
-                            <label for="formcheck" class="form-check-label text-secondary">Remember me</small>   
+                            <label for="formcheck" class="form-check-label"> Remember me</small>   
                         </div>
                         <div class="col d-flex justify-content-end">
                             <!-- Simple link -->
-                            <a href="#!">Forgot password?</a>
+                            <a href="#!" class="text-dark">Forgot password?</a>
                         </div>  
                     </div>
                     <div class="d-grid gap-2">
-                        <button class="btn btn-primary" type="button">Button</button>
-                        <button class="btn btn-primary" type="button">
+                        <button class="btn btn-outline-dark" type="button">Login</button>
+                        <button class="btn btn-outline-dark" type="button">
                             <img src="img/google.png" class="img-fluid" width="20px">
                             Login with Google</button>
                     </div>
